[package]
name = "local-file-transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.3.23", features = ["derive"] }
get_if_addrs = "0.5.3"
tokio = { version = "1.28.2", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "fs",
] }
